<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.editCueCard.EditCueCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cue_card_edit_fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:padding="8dp"
                android:text="@string/edit_cue_card"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:background="#00000000"
                android:contentDescription="@string/start_presentation_mode"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:background="#00000000"
                android:contentDescription="@string/start_presentation_mode"
                android:drawableEnd="@drawable/ic_check"
                android:fontFamily="@font/montserrat_bold"
                android:padding="8dp"
                android:text="@string/save"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/cue_card_title"
            android:hint="@string/cue_card_title"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_card_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@id/cue_card_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/card_content_edit_text"
            app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

        <EditText
            android:id="@+id/card_content_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/add_a_bullet_point"
            android:hint="@string/add_a_bullet_point"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_card_content_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_card_content_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_content_edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>